# chatui-template-with-htmx

./: .env.example  DESIGN.md  LICENSE  README.md  pyproject.toml  requirements.txt  scripts_gen_demo_jwt.py
app/: main.py
app/core/: auth.py  config.py
app/domain/: models.py
app/gateways/llm/: base.py  mock_gateway.py
app/repositories/: base.py  in_memory.py
app/routers/: chat.py  pages.py
app/schemas/: auth.py  stream_events.py
app/services/: chat_service.py
app/static/css/: app.css
app/templates/: base.html  chat.html
app/templates/components/: conversation_list.html  conversation_messages.html  message_pair.html
docs/: ARCHITECTURE.md
